--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abt-inentory",
+  "name": "autosmart-fs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
+    "@ant-design/icons": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "@types/react-dom": "18.0.11",
+    "@types/sfcookies": "^1.0.1",
+    "antd": "^5.4.7",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
+    "moment": "^2.29.4",
+    "next": "13.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "sfcookies": "^1.0.2",
+    "typescript": "5.0.2"
   }
 }
